--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://MKUltra:Max2103@games.6kcxrz3.mongodb.net/?retryWrites=true&w=majority&appName=Games
+MONGO_URI = 
 JWT_SECRET="momotaro21032004"
